@@ -1,4 +1,6 @@
 Changes with Apache 2.0.36
+  *) Fix segfault in mod_mem_cache when garabge collecting an expired
+     cache entry.  [Bill Stoddard]
 
   *) Introduced -E startup_logfile_name option to httpd to allow admins
      to begin logging errors immediately.  This provides Win32 users 
